<resources>
    <string name="app_name" translatable="false">Stringlate</string>
    <string name="original_string">Original string:</string>
    <string name="translated_string_colon">Translated string:</string>
    <string name="next">Next</string>
    <string name="current_string_id">Current string ID:</string>
    <string name="selected_locale">Selected locale:</string>
    <string name="welcome">Welcome to Stringlate! Enter a GitHub project name and its owner or paste the repository\'s Git URL below to continue.</string>
    <string name="owner_hint">owner</string>
    <string name="slash" translatable="false">/</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="repository_hint">repository</string>
    <string name="or">or</string>
    <string name="github_repo_url_hint">https://github.com/owner/repository</string>
    <string name="update_strings">Update strings.xml</string>
    <string name="add_locale">Add new locale</string>
    <string name="loading_ellipsis">Loading…</string>
    <string name="no_strings_found_update">No strings.xml files were found, please update the strings.xml.</string>
    <string name="no_strings_found">No strings.xml files were found in this repository.</string>
    <string name="scanning_repository">Scanning repository…</string>
    <string name="scanning_repository_long">Looking for strings.xml files in the repository…</string>
    <string name="repo_or_url_required">Please enter a project owner and name or an URL.</string>
    <string name="invalid_repo">The input repository doesn\'t seem valid.</string>
    <string name="translated_string">Translated string</string>
    <string name="previous">Previous</string>
    <string name="no_strings_left">There are no more strings left.</string>
    <string name="save">Save</string>
    <string name="save_error">Could not save changes.</string>
    <string name="save_success">strings.xml file saved successfully.</string>
    <string name="add_locale_to_start">Add a new locale to get started.</string>
    <string name="enter_locale">Enter locale name</string>
    <string name="enter_locale_long">Enter the locale name for which the strings.xml file will be created (your current locale is \"%s\"):</string>
    <string name="choose_locale_from_list">Choose locale from list</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="create_locale_error">Could not create the new locale file.</string>
    <string name="show_translated_strings">Show translated strings</string>
    <string name="show_identical_strings_only">Show only identical strings</string>
    <string name="delete_ellipsis">Delete…</string>
    <string name="delete_string">Delete string</string>
    <string name="delete_locale">Delete locale</string>
    <string name="delete_repository">Delete repository</string>
    <string name="no_locale_selected">There is no locale selected.</string>
    <string name="sure_question">Are you sure?</string>
    <string name="delete_locale_confirm_long">Do you really wish to delete the locale \"%s\"? All its strings will be lost.</string>
    <string name="delete_repository_confirm_long">Do you really wish to delete the repository \"%s\"? The local clone will be erased from the phone memory, although it can be added again.</string>
    <string name="invalid_locale">The input locale does not seem valid.</string>
    <string name="export_ellipsis">Export…</string>
    <string name="export_sd_card">Export to SD card</string>
    <string name="export_gist">Export to GitHub Gist</string>
    <string name="export_pr">Create GitHub Pull Request</string>
    <string name="export_share">Share generated xml</string>
    <string name="save_resources_question">Save resources?</string>
    <string name="save_resources_question_long">The resources for the current locale have been modified, but the changes weren\'t saved. Do you want to save them now?</string>
    <string name="delete_no_locale_bad_joke">You first need to have a locale before you can remove its existence from this planet ;-)</string>
    <string name="discover">Discover projects</string>
    <string name="gist_description">Gist description (optional):</string>
    <string name="default_gist_share_description" translatable="false">strings.xml translation shared with Stringlate</string>
    <string name="gist_filename">Gist filename:</string>
    <string name="is_public_gist">This is a public Gist</string>
    <string name="post_gist">Post GitHub Gist</string>
    <string name="post_gist_success">Your Gist has been posted, well done!</string>
    <string name="open">Open</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>
    <string name="posting_gist_title">Posting %s Gist</string>
    <string name="error_gist_filename_empty">Gist filename cannot be empty</string>
    <string name="posting_gist_ellipsis">Posting Gist…</string>
    <string name="posting_gist_ellipsis_long">Trying to post the strings.xml file as a GitHub Gist…</string>
    <string name="post_gist_error">The Gist could not be posted.</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="xml_copied_to_clipboard">The %s file contents have been copied to your clipboard</string>
    <string name="no_internet_connection">You are not connected to the internet.</string>
    <string name="export_file_failed">Could not export strings.xml file</string>
    <string name="export_file_success">File successfully saved to %s</string>
    <string name="import_file_failed">Could not import the selected item</string>
    <string name="import_file_success">Import success</string>
    <string name="update_applications">Update applications</string>
    <string name="apps_repo_not_downloaded">The applications repository has not been downloaded yet. Tap the \"%s\" menu button to download the repository index in order to explore all the available applications.</string>
    <string name="sync_failed">Failed to synchronize %s.</string>
    <string name="downloading_index_jar">Downloading index.jar…</string>
    <string name="downloading_index_jar_long">The index.jar containing the applications list is being downloaded…</string>
    <string name="extracting_index_xml">Extracting index.xml from index.jar…</string>
    <string name="extracting_index_xml_long">Extracting the index.xml containing the applications\' information…</string>
    <string name="loading_index_xml">Loading index.xml…</string>
    <string name="loading_index_xml_long">Loading and minimizing the applications\' index…</string>
    <string name="done">Done!</string>
    <string name="search">Search</string>
    <string name="search_apps_ellipsis">Search applications…</string>
    <string name="icon_cache_cleared">Icon cache cleared (%s freed).</string>
    <string name="pulling_strings">Pull new strings</string>
    <string name="pulling_strings_long">Pulling new strings will keep your translation intact while possibly adding new untranslated strings. You should do this before uploading your translations to make sure you\'ve translated everything. Do you wish to continue?</string>
    <string name="keep_changes">Keep changes</string>
    <string name="discard_changes">Discard changes</string>
    <string name="save_before_sync_required">You need to save before synchronizing.</string>
    <string name="history">History</string>
    <string name="add_new_repo">Add new repository</string>
    <string name="add_project">Add project</string>
    <string name="start_translating">Start translating</string>
    <string name="history_no_repos_hint">New here? Head to the \"%s\" tab to get started!</string>
    <string name="history_contains_repos_hint">These are your previously synchronized repositories. Select one below or add a new one to continue.</string>
    <string name="repositories_colon">Repositories:</string>
    <string name="projects_colon">Projects:</string>
    <string name="show_more">Show more</string>
    <string name="clear_icons_cache">Clear icons cache</string>
    <string name="help">Help</string>
    <string name="open_online_help">Open online help</string>
    <string name="translation_progress">%1$d/%2$d strings translated (%3$.1f%%).</string>
    <string name="allow_download_icons">Allow downloading icons</string>
    <string name="do_not_save">Don\'t save</string>
    <string name="save_count">Save (%d)</string>
    <string name="not_translated">Not translated.</string>
    <string name="search_id_content_ellipsis">Search by ID or content…</string>
    <string name="github_not_logged_long">In order to provide some extra functionality such as non-anonymous Gists, creating issues and pull requests, you need to authorize Stringlate. Click the button below to get started.</string>
    <string name="request_auth">Request authorization</string>
    <string name="github_yes_logged_long">You\'re already logged in to GitHub. No further action is required. If things are not working, you can always click the button again to start over.</string>
    <string name="login_to_github">Login to GitHub</string>
    <string name="auth_success">Authorization success</string>
    <string name="completing_auth_ellipsis">Completing authorization…</string>
    <string name="is_anonymous_gist">This is an anonymous Gist</string>
    <string name="gist_login_needed">To post non-anonymous Gists you need to authorize Stringlate on GitHub from the main screen.</string>
    <string name="export_issue">Export to GitHub issue</string>
    <string name="create_issue">Create issue</string>
    <string name="creating_issue_ellipsis">Creating issue…</string>
    <string name="creating_issue_long_ellipsis">Trying to create the issue on GitHub…</string>
    <string name="added_x_translation" translatable="false">Added %s (%s) translation</string>
    <string name="added_x_translation_spam" translatable="false">Updated %s (%s) translation\n\nCommit made via Stringlate</string>
    <string name="issue_description">Issue description (%x will be replaced with the translation):</string>
    <string name="new_issue_template" translatable="false">I have translated your application into `%s` (*%s*). Here is the xml:\n%%x\n\n---\n\n*Translation made with [Stringlate](https://github.com/LonamiWebs/Stringlate).*</string>
    <string name="comment_issue_template" translatable="false">I have updated the `%s` (*%s*) translation:\n%%x\n\n---\n\n*Translation made with [Stringlate](https://github.com/LonamiWebs/Stringlate).*</string>
    <string name="url_copied">The Url has been copied to your clipboard.</string>
    <string name="share_url">Share Url</string>
    <string name="create_issue_success">Your issue has been created, well done!</string>
    <string name="create_issue_error">The issue could not be created.</string>
    <string name="can_push_no_pr">You seem to have write access to this repository. No pull request will be made.</string>
    <string name="cannot_push_will_pr">You don\'t seem to have write access to this repository. Stringlate will fork it into your account (or use an existing fork), commit the translation you\'ve made and create the pull request.</string>
    <string name="selected_branch_colon">Selected branch:</string>
    <string name="commit_message">Commit message</string>
    <string name="commit_changes">Commit changes</string>
    <string name="warning_experimental" translatable="false">Please note that this feature is still experimental. Use with care!!</string>
    <string name="issue_title">Issue title</string>
    <string name="sort_by_ellipsis">Sort by…</string>
    <string name="sort_alphabetically">Alphabetically</string>
    <string name="sort_string_length">String length</string>
    <string name="open_project_homepage">Open project homepage</string>
    <string name="peek_translations">Peek translations</string>
</resources>