<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchStrings"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/peekTranslations"
        android:icon="@drawable/ic_eye_white_24px"
        android:title="@string/peek_translations"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/updateStrings"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/update_strings" />

    <item
        android:id="@+id/addLocale"
        android:icon="@drawable/ic_note_add_black_24dp"
        android:title="@string/add_locale" />


    <item
        android:id="@+id/action_open_project_homepage"
        android:icon="@drawable/ic_public_black_24dp"
        android:title="@string/open_project_homepage" />

    <item
        android:id="@+id/sortBy"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sort_by_ellipsis">
        <menu>
            <item
                android:id="@+id/sortAlphabetically"
                android:title="@string/sort_alphabetically" />

            <item
                android:id="@+id/sortLength"
                android:title="@string/sort_string_length" />
        </menu>
    </item>

    <item
        android:id="@+id/export"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/export_ellipsis">
        <menu>
            <item
                android:id="@+id/exportToSdcard"
                android:title="@string/export_sd_card" />
            <item
                android:id="@+id/exportShare"
                android:title="@string/export_share" />

            <item
                android:id="@+id/exportCopy"
                android:title="@string/copy_to_clipboard" />


            <item
                android:id="@+id/export_mail"
                android:title="@string/email" />

            <item
                android:id="@+id/export_hastebin"
                android:title="@string/hastebin" />

            <item
                android:id="@+id/export_github_menu"
                android:title="@string/github">
                <menu>
                    <item
                        android:id="@+id/github_export_to_pr"
                        android:title="@string/export_pull_request" />
                    <item
                        android:id="@+id/export_to_gist"
                        android:title="@string/export_gist" />

                    <item
                        android:id="@+id/github_export_to_issue"
                        android:title="@string/export_issue" />

                </menu>
            </item>
        </menu>
    </item>

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete_ellipsis">
        <menu>
            <item
                android:id="@+id/deleteString"
                android:title="@string/delete_string" />

            <item
                android:id="@+id/deleteLocale"
                android:title="@string/delete_locale" />

            <item
                android:id="@+id/deleteRepo"
                android:title="@string/delete_repository" />
        </menu>
    </item>

    <item
        android:id="@+id/showTranslatedCheckBox"
        android:checkable="true"
        android:checked="false"
        android:title="@string/show_translated_strings" />

    <item
        android:id="@+id/showIdenticalCheckBox"
        android:checkable="true"
        android:checked="false"
        android:title="@string/show_identical_strings_only" />
</menu>
