<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/updateStrings"
        android:icon="@android:drawable/stat_notify_sync"
        android:title="@string/update_strings"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/addLocale"
        android:title="@string/add_locale" />

    <item android:id="@+id/delete"
        android:title="@string/delete_ellipsis">
        <menu>
            <item android:id="@+id/deleteString"
                android:title="@string/delete_string" />

            <item android:id="@+id/deleteLocale"
                android:title="@string/delete_locale" />

            <item android:id="@+id/deleteRepo"
                android:title="@string/delete_repository" />
        </menu>
    </item>

    <item
        android:id="@+id/showTranslatedCheckBox"
        android:title="@string/show_translated_strings"
        android:checkable="true"
        android:checked="false" />
</menu>
