<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/updateApplications"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/update_applications"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/allowDownloadIcons"
        android:checkable="true"
        android:checked="false"
        android:title="@string/allow_download_icons" />

    <item
        android:id="@+id/clearIconsCache"
        android:title="@string/clear_icons_cache" />
</menu>
