<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.lonamiwebs.stringlate.activities.repositories.AddNewRepositoryFragment">

    <ScrollView
        android:layout_above="@+id/translate_buttons"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome" />

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/repository_hint"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/urlEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/github_repo_url_hint"
                android:inputType="textUri"
                android:imeOptions="actionDone" />

            <TextView
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/github"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/github_ownerEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/owner_hint"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:nextFocusRight="@id/github_repositoryEditText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash" />

                <EditText
                    android:id="@+id/github_repositoryEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/repository_hint"
                    android:maxLines="1"
                    android:imeOptions="actionDone" />
            </LinearLayout>

            <!-- Overscroll -->
            <android.support.v4.widget.Space
                android:layout_width="@dimen/appbar_padding_top"
                android:layout_height="48dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/translate_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/discoverButton"
            style="?buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_explore_yellow_24dp"
            android:drawableStart="@drawable/ic_explore_yellow_24dp"
            android:text="@string/discover" />

        <Button
            android:id="@+id/nextButton"
            style="?buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_play_circle_filled_yellow_24dp"
            android:drawableStart="@drawable/ic_play_circle_filled_yellow_24dp"
            android:text="@string/start_translating" />
    </LinearLayout>
</RelativeLayout>
